# cmake-example

./: .gitignore
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/src/: Hello.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/src/: Hello.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: Hello.cpp
01-basic/E-installing/: CMakeLists.txt  README.adoc
01-basic/F-build-type/: CMakeLists.txt
01-basic/G-compile-flags/: CMakeLists.txt  main.cpp
01-basic/H-third-party-library/: CMakeLists.txt  main.cpp
01-basic/H-third-party-library/config/: config.cmake
01-basic/H-third-party-library/include/: mbedtls_config.h
01-basic/H-third-party-library/lib/: CMakeLists.txt
